Regression: Image editor fails to update after undoing stroke #96163

Closed
opened 2022-03-04 12:47:35 +01:00 by Pratik Borhade · 2 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: AMD Radeon(TM) 535 ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.21003.8013

Blender Version
Broken: version: master, 3.1.0
Initially caused by 507a4deef1

Short description of error
Image editor fails to update after undoing stroke.
Initially this was broken by 507a4deef1 (but zooming or panning around used to update the editor)
After 5e9c1feb8a this became more worse
And now it neither updates on pan or zoom

Exact steps for others to reproduce the error

  • Open .blend file
  • Draw a stoke in Image editor
  • Undo (Editor does not update)
  • Draw stroke around previous stroke

Test File:
tex-paint-undo.blend

After 507a4deef1 After 5e9c1feb8a
Blender [C__Users_Pratik_Downloads_tex-paint-undo.blend] 2022-03-04 17-15-02.mp4 Blender [C__Users_Pratik_Downloads_tex-paint-undo.blend] 2022-03-04 17-11-02.mp4
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: AMD Radeon(TM) 535 ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.21003.8013 **Blender Version** Broken: version: master, 3.1.0 Initially caused by 507a4deef1 **Short description of error** Image editor fails to update after undoing stroke. Initially this was broken by 507a4deef1 (but zooming or panning around used to update the editor) After 5e9c1feb8aff0ca40eff6689f9bf6a9678711a9e this became more worse And now it neither updates on pan or zoom **Exact steps for others to reproduce the error** - Open .blend file - Draw a stoke in Image editor - Undo (Editor does not update) - Draw stroke around previous stroke Test File: [tex-paint-undo.blend](https://archive.blender.org/developer/F12896994/tex-paint-undo.blend) | After 507a4deef1 | After 5e9c1feb8a | | -- | -- | | [Blender [C__Users_Pratik_Downloads_tex-paint-undo.blend] 2022-03-04 17-15-02.mp4](https://archive.blender.org/developer/F12896985/Blender__C__Users_Pratik_Downloads_tex-paint-undo.blend__2022-03-04_17-15-02.mp4) | [Blender [C__Users_Pratik_Downloads_tex-paint-undo.blend] 2022-03-04 17-11-02.mp4](https://archive.blender.org/developer/F12896975/Blender__C__Users_Pratik_Downloads_tex-paint-undo.blend__2022-03-04_17-11-02.mp4) |
Author
Member

@Jeroen-Bakker hi, can you check?
Raising the priority since it's a regression

@Jeroen-Bakker hi, can you check? Raising the priority since it's a regression
Pratik Borhade changed title from Image editor fails to update after undoing stroke to Regression: Image editor fails to update after undoing stroke 2022-03-04 12:53:35 +01:00
Jeroen Bakker self-assigned this 2022-03-04 13:32:12 +01:00

This issue was referenced by 073d2390f0

This issue was referenced by 073d2390f0b8d37a5f02309ac1dcaf7618d7a4f9
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96163
No description provided.